--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oddslib",
-  "version": "0.11.1",
+  "version": "1.0.0",
   "description": "Odds conversion and formatting library",
   "main": "oddslib.js",
   "scripts": {
@@ -12,7 +12,5 @@
     "chai": "^3.5.0",
     "mocha": "^3.2.0"
   },
-  "dependencies": {
-    "num2fraction": "^1.2.2"
-  }
+  "dependencies": {}
 }
